[package]
name = "hyperloglogplus"
version = "0.2.1"
authors = ["Tasos Bakogiannis <t.bakogiannis@gmail.com>"]
description = "HyperLogLog implementations."
homepage = "https://github.com/tabac/hyperloglog.rs"
repository = "https://github.com/tabac/hyperloglog.rs"
documentation = "https://docs.rs/hyperloglogplus"
readme = "README.md"
license = "MIT"
keywords = ["hyperloglog", "hyperloglog++", "probabilistic", "sketch"]
edition = "2018"
exclude = ["evaluation/*"]

[features]
# Specify this feature flag to run also unit benchmarks
# using the nightly compiler.
bench-units = []

[profile.release]
debug = true

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "hyperloglog"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
