[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Tasos Bakogiannis <t.bakogiannis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperloglogplus = { path = "..", features = ["const-loop"] }
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "hyperloglog"
harness = false
